@@ -11,6 +11,8 @@
    structures.
  * Added macros to get the version Phobos from the API (major, minor and patch)
    and macros to check the current version is higher than a given one
+ * We manage a last locate timestamp and the corresponding delay in the LRS to
+   prevent after locate resource starvation.
 
 ## 3.1.0
  * limited number of write per grouping: the new "fifo_max_write_per_grouping"
